--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/static/styles.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5968051064410418"
      crossorigin="anonymous"></script>
+    <script type='text/javascript' src='//pl22497708.profitablegatecpm.com/ec/ba/e4/ecbae40dc129bf6082541825157b1150.js'></script>
 </head>
 <body>
 <main class="main">
