--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,7 @@
         <a class="nav__link {{'nav__link-current' if request.path == url_for('homepage') }}" href="{{ url_for('homepage') }}">
             Homepage
         </a>
+        <script type='text/javascript' src='//pl22497708.profitablegatecpm.com/ec/ba/e4/ecbae40dc129bf6082541825157b1150.js'></script>
         <a class="nav__link {{'nav__link-current' if request.path == url_for('contact') }}" href="{{ url_for('contact') }}">
             Contact
         </a>
@@ -28,6 +29,7 @@
 
     </header>
 </main>
+    <script type='text/javascript' src='//pl22497708.profitablegatecpm.com/ec/ba/e4/ecbae40dc129bf6082541825157b1150.js'></script>
 {% block content %}
 {% endblock %}
 </body>
