--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,16 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5968051064410418"
      crossorigin="anonymous"></script>
     <script type='text/javascript' src='//pl22497708.profitablegatecpm.com/ec/ba/e4/ecbae40dc129bf6082541825157b1150.js'></script>
+    <script type="text/javascript">
+	atOptions = {
+		'key' : 'a76afa5532d7922b08b7bdc302987172',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//www.topcreativeformat.com/a76afa5532d7922b08b7bdc302987172/invoke.js"></scr' + 'ipt>');
+</script>
 </head>
 <body>
 <main class="main">
@@ -30,6 +40,16 @@
     </header>
 </main>
     <script type='text/javascript' src='//pl22497708.profitablegatecpm.com/ec/ba/e4/ecbae40dc129bf6082541825157b1150.js'></script>
+        <script type="text/javascript">
+	atOptions = {
+		'key' : 'a76afa5532d7922b08b7bdc302987172',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//www.topcreativeformat.com/a76afa5532d7922b08b7bdc302987172/invoke.js"></scr' + 'ipt>');
+</script>
 {% block content %}
 {% endblock %}
 </body>
